tests/paczka2/big_fuzzy/21359963.err
Error in line 7: Sdq7BjS A886 8,3
Error in line 6: fAp71JXn S415 66,3
Error in line 18: Sdq7BjS S19 7,7
Error in line 12: A886 S19 4,0
Error in line 24: Sdq7BjS A886 19,0
Error in line 25: A886 S415 21,3
Error in line 30: Sdq7BjS S415 15,0
Error in line 40: yGRP S19 45,4
Error in line 42: yGRP A886 89,3
Error in line 41: 5tc S415 34,0
Error in line 54: QrJsr S415 65,2
Error in line 57: yGRP S19 37,0
Error in line 62: yGRP A886 52,1
Error in line 64: MgYccX7R1q A899 69,5
Error in line 65: yGRP A899 67,3
Error in line 66: MgYccX7R1q S415 36,4
Error in line 71: fAp71JXn S19 407,6
Error in line 69: yGRP S19 91,5
Error in line 59: A886 S415 27,2
Error in line 67: 5tc S19 135,6
Error in line 78: A886 A899 62,6
Error in line 80: 5tc A886 50,6
Error in line 105: yGRP A886 90,7
Error in line 84: MgYccX7R1q A899 5,3
Error in line 102: fAp71JXn S415 40,4
Error in line 109: MgYccX7R1q S415 0,1
Error in line 112: fAp71JXn A899 76,4
Error in line 113: MgYccX7R1q A886 29,7
Error in line 119: MgYccX7R1q S19 150,2
Error in line 108: yGRP S415 90,3
Error in line 122: yGRP A899 53,9
Error in line 107: Sdq7BjS A899 12,4
Error in line 124: yGRP S415 66,6
Error in line 129: fAp71JXn S19 5,3
Error in line 128: yGRP S19 40,4
Error in line 135: fAp71JXn A886 54,9
Error in line 141: QrJsr S415 55,7
Error in line 142: yGRP A899 95,3
Error in line 150: MgYccX7R1q A886 60,6
Error in line 144: A886 A886 48,4
Error in line 171: MgYccX7R1q A899 6,36
Error in line 172: MgYccX7R1q A886 98,8
Error in line 168: fAp71JXn S415 15,8
Error in line 165: QrJsr S19 79,1
Error in line 180: A886 S19 4,8
Error in line 191: fAp71JXn S415 61,5
Error in line 204: fAp71JXn A886 74,89
Error in line 200: yGRP A899 35,2
Error in line 202: fAp71JXn S415 70,6
Error in line 221: QrJsr A899 86,4
Error in line 219: 5tc S19 7,1
Error in line 241: yGRP A886 46,49
